--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -9,22 +9,39 @@
         .first-section {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            /* height: 90vh; */
+            #helper {
+                display: grid;
+                .first-section-heading-container,
+                .first-section-image-container {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+            }
             .first-section-heading-container {
-                text-align: center;
+                /* text-align: center; */
                 margin-top: 2em;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                width: 100%;
+                align-items: center;
                 h1 {
+                    color: white;
+                    position: absolute;
+                    z-index: 9;
                     display: inline-flex;
-                    padding: .5em;
+                    background-color: transparent;
+                    text-decoration: underline;
                     font-size: 3rem;
                     transition-duration: .2s;
+                    font-size: 4rem;
+                    color: gold;
                     /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
                 }
-                h1:hover {
+                /* h1:hover {
                     box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
                     transition-duration: .2s;
-                }
+                } */
             }
             .first-section-image-container {
                 height: 50%;
@@ -33,11 +50,17 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                position: relative;
                 img {
-                    margin: 3em;
+                    /* margin: 3em; */
                     width: 100%;
-                    max-width: 45em;
-                    height: auto;
+                    max-width: 85em;
+                    height: 30em;
+                    filter: blur(5px) grayscale(1);
+                }
+                img:hover {
+                    filter: blur(0) grayscale(0);
+                    z-index: 10;
                 }
                 .first-section-image-container:nth-child(1) {
                     padding-bottom: 5em;
