--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -26,16 +26,16 @@
                 width: 100%;
                 align-items: center;
                 h1 {
+                    font-family: customFontTwo;
                     color: white;
                     position: absolute;
                     z-index: 9;
                     display: inline-flex;
                     background-color: transparent;
-                    text-decoration: underline;
-                    font-size: 3rem;
+                    /* text-decoration: underline; */
+                    font-weight: bolder;
+                    font-size: 5rem;
                     transition-duration: .2s;
-                    font-size: 4rem;
-                    color: gold;
                     /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
                 }
                 /* h1:hover {
@@ -112,14 +112,19 @@
                         justify-content: center;
                         flex-direction: column;
                         height: 100%;
+                        padding-left: 2em;
                         p {
                             width: 100%;
                             max-width: 25em;
                             height: 100%;
-                            /* padding: 3em;*/
-                            padding-left: 2em;
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            /* padding-left: 2em; */
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                            justify-self: flex-start;
                         }
                     }
                     img {
@@ -139,15 +144,19 @@
                         justify-content: center;
                         flex-direction: column;
                         height: 100%;
+                        padding-right: 4em;
                         p {
                             width: 40vw;
                             max-width: 25em;
                             height: 100%;
                             /* padding: 3em;*/
-                            padding-right: 2em;
                             /* padding-bottom: -10em; */
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            padding-bottom: .3em;
+                            font-weight: bold;
                         }
                     }
                     img {
@@ -162,9 +171,6 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                /* background-color: #f7f7f7; */
-                /* filter: opacity(40%); */
-                transition-duration: .2s;
                 h3 {
                     margin: 4em;
                     margin-inline: 6em;
@@ -176,7 +182,7 @@
             {
                 filter: opacity(100%);
                 transition-duration: .2s;
-                box-shadow: 0px 20px 20px 2px rgba(95, 95, 95, 0.229);
+                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
             }
         }
         
@@ -212,11 +218,16 @@
                     justify-content: center;
                     .third-section-desc-container {
                         align-self: center;
-                        p {
+                        p,
+                        h4 {
                             max-width: 20vw;
                             padding: 2em;
                             padding-left: 3em;
                             font-size: 130%;
+                        }
+                        h4 {
+                            padding-bottom: 0;
+                            font-weight: bold;
                         }
                     }
                     img {
