--- a/individual-work/wba-projekt-2/styles/_mixin.scss
+++ b/individual-work/wba-projekt-2/styles/_mixin.scss
@@ -20,3 +20,8 @@
         /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
     }
 }
+
+@mixin form-border-correction {
+    border: 1Px solid #ffffff00;
+    border-bottom: 1px solid #76767679;
+}
