--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -29,7 +29,13 @@ header {
                     list-style: none;
                     line-height: 20px;
                     width: 150px;
-                    /* margin-right: 30px; */
+                    text-align: center;
+                }
+                .button-container li:nth-child(1) {
+                    border-right: 1Px solid black;
+                }
+                .button-container li:nth-child(2) {
+                    border-left: 1Px solid black;
                 }
                 .button-container li a {
                     text-decoration: none;
