--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -180,7 +180,15 @@ header nav .navbar-main .button .button-container li {
   list-style: none;
   line-height: 20px;
   width: 150px;
-  /* margin-right: 30px; */
+  text-align: center;
+}
+
+header nav .navbar-main .button .button-container li:nth-child(1) {
+  border-right: 1Px solid black;
+}
+
+header nav .navbar-main .button .button-container li:nth-child(2) {
+  border-left: 1Px solid black;
 }
 
 header nav .navbar-main .button .button-container li a {
@@ -352,8 +360,8 @@ main {
   width: 100%;
   max-width: 85em;
   height: 30em;
-  -webkit-filter: blur(5px) grayscale(1);
-          filter: blur(5px) grayscale(1);
+  -webkit-filter: blur(2px) grayscale(1);
+          filter: blur(2px) grayscale(1);
 }
 
 .first-section .first-section-image-container img:hover {
