--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -56,7 +56,8 @@
                     width: 100%;
                     max-width: 85em;
                     height: 30em;
-                    filter: blur(2px) grayscale(1);
+                    transition-duration: .5s;
+                    filter: blur(1px) grayscale(1);
                 }
                 img:hover {
                     filter: blur(0) grayscale(0);
@@ -171,6 +172,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-inline: 4em;
                 h3 {
                     margin: 4em;
                     margin-inline: 6em;
